# serverfetch

./: README.md  pyproject.toml
serverfetch/: __main__.py
